k8s/eks/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crypto-mock-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: crypto-mock-app
  template:
    metadata:
      labels:
        app: crypto-mock-app
    spec:
      containers:
        - name: app
          image: 123456789012.dkr.ecr.ap-northeast-2.amazonaws.com/java-crypto-mock:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 20
